day0918 finish commit

--- a/project0916/문제26.html
+++ b/project0916/문제26.html
@@ -5,6 +5,11 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>문제26</title>
 <script>
+    /*
+        원하는 연도를 입력받은 후, 그 해에 윤달이 있는지 없는지 판단하세요.
+        ex. 2013년을 입력받을 경우 "28일까지"
+              2012년을 입력받을 경우 "29일까지" 
+    */
     var n = prompt("원하는 연도를 입력하세요:");
     n=parseInt(n);
     for()
