--- a/project0918/감속도 운동_up.html
+++ b/project0918/감속도 운동_up.html
@@ -10,9 +10,19 @@
 <title>Document</title>
 <style>
     #box{
-        width: 100px;
-        height: 100px;
+        width: 40px;
+        height: 40px;
         background: red;
+    }
+    /* 마우스 이벤트는 body를 대상으로는 반응을 보이지 않을 경우가 있으므로
+        body만한 크기의 div로 문서 전체를 덮어버리기 위한 div */
+    .wrapper{
+        width: 100%;
+        height: 700px;
+        background: yellow;
+    }
+    body{
+        margin: 0px;
     }
 </style>
 <script>
@@ -53,11 +63,26 @@
     function auto(){
         setInterval("move()",10);
     }
+    /* 문서에 마우스를 누를때마다 마우스의 좌표를 구해서 box가
+        움질일 새로운 목표지점을 설정해주자. */
+    function getPos(){
+        var x = event.clientX;
+        var y = event.clientY;
+        console.log("x is",x);
+        console.log("y is",y);
+        // 구해온 좌표를 targetX 와 targetY에 대입하면, 새로운 목표지점이
+        // 생기므로 사각박스가 움직이게 된다.
+        targetX = x;
+        targetY = y;
+    }
 </script>
 </head>
-<body onload="init()">
-    <button onclick="move()">수동</button>
-    <button onclick="auto()">자동</button>
-    <div id="box"></div>
+<!-- onmouseover 키워드도 사용해 보자 마우스가 움직일 때마다 따라다니면서 움직임 -->
+<body onload="init(); auto()" onclick="getPos()">
+    <div class="wrapper">
+        <button onclick="move()">수동</button>
+        <!-- <button onclick="auto()">자동</button> -->
+        <div id="box"></div>
+    </div>
 </body>
 </html>
