--- a/project0922/name의 특징.html
+++ b/project0922/name의 특징.html
@@ -13,10 +13,10 @@
         var box = document.getElementsByName("box");
         console.log("생성된 div의 수는 "+box.length);
         for(var i=0;i<box.length;i++){
-            box[0].style.background="red";
-            box[0].style.width=100+"px";
-            box[0].style.height=100+"px";
-            box[0].style.border="1px solid yellow";
+            box[i].style.background="red";
+            box[i].style.width=100+"px";
+            box[i].style.height=100+"px";
+            box[i].style.border="1px solid yellow";
         }
         
      });
