--- a/project0922/갤러리.html
+++ b/project0922/갤러리.html
@@ -141,7 +141,7 @@
         <div id="control">
             <button onclick="prev()">◀</button>
             <!-- onClick = this.innerText='왕버튼' -->
-            <button id="bt" onclick="; auto()">auto</button>
+            <button id="bt" onclick="auto()">auto</button>
             <select id="interval">
                 <option value="0">속도선택</option>
                 <option value="1000">1초간격</option>
