--- a/project0924/사원테이블.html
+++ b/project0924/사원테이블.html
@@ -35,6 +35,7 @@
         height: 100%;
         background: darkgoldenrod;
         float: left;
+        overflow: scroll;
     }
 </style>
 <script>
