--- a/project0925/화살날리기.html
+++ b/project0925/화살날리기.html
@@ -4,34 +4,36 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Document</title>
-
+<script src="./Arrow.js"></script>
 <script>
-    var arrow;    
-    var stepX=10;
 
-    // (1) 화살표 생성
-    function createArrow(){
-        arrow = document.createElement("span");
-        arrow.innerText="→";
-        arrow.style.position="absolute";
-        arrow.style.left=50+"px";
-        arrow.style.top=100+"px";
-        arrow.style.color="red";
-        arrow.style.fontSize="30px";
-
-        document.body.appendChild(arrow);
-    }
-    // (2) 화살표 날리기
-    function move(){
-        arrow.style.left=parseInt(arrow.style.left)+stepX+"px";
-    }
+    var arr = [5];
     function init(){
-        createArrow();       
+        for(var i=0;i<5;i++){
+            // 인스턴스 생성자 만들기
+            // Arrow 클래스를 arrow라는 인스턴스변수에 담는 것.
+            var arrow = new Arrow(100,i*70);
+                                    // -> Arrow가 생성자가 됨.
+                                    // new 뒤에 오는 클래스명()으로 인해 
+                                    // class 안에 있는 메서드가 자동 호출된다.
+                                    // . 을 찍으면 함수 바로 호출!! = 생성자 매서드라 한다.
+                    // ==> 사용이유? 각자에 개성을 부여하고 싶다면 이 생성자 메소드를
+                    //          적극 활용하면 된다.
+            arr[i]=arrow;     
+            // arrow가 지역변수라 전역으로 빼면 문제가 발생                   
+            // arrow 인스턴스변수를 arr[i]라는 배열에 담는다
+            // 담는 것 ? 화살 하나하나 생성될 때마다 담는 그릇이 필요하기 때문에
+            // 그리고 움직이는 것을 매개변수를 생성자로 받는다.              
+        }
+        setInterval(function(){
+            for(var i=0;i<arr.length;i++){
+                arr[i].move();
+            }
+        },10);
     }
 
     window.addEventListener("load",function(){
-        init();
-        setInterval("move()",50);
+        init();        
     });
 </script>
 </head>
