--- a/project0921/게시판탭T개선1-2.html
+++ b/project0921/게시판탭T개선1-2.html
@@ -20,6 +20,7 @@
         width: 100%;
         height: 450px;
     }
+    /* 상단에 링크 박스와 색을 맞추기 */
     #box1{
         background: seagreen;
     }
@@ -44,46 +45,30 @@
     }
 </style>
 <script>
-    var box1;
-    var box2;
-    var box3;
+    var box1,box2,box3;
+
+    function showHide(n){
+
+        for(var i=1;i<=3;i++){
+            var box = document.getElementById("box"+i);
+            if(n==i){
+                // 보이게 안보이게        
+                box.style.display="block";
+            }else{
+                box.style.display="none";
+            }
+        }
+    }
 
     function init(){
         box1 = document.getElementById("box1");
         box2 = document.getElementById("box2");
         box3 = document.getElementById("box3");
     }
+
     window.addEventListener("load",function(){
         init();
     });
-
-
-    // 배열을 이용해서 함수를 하나로 만들수도 있음
-    // 아니면 매개변수로 사용
-    // 매개변수 n에는 지금 유저가 선택한 탭의 정보가 넘어옴(1=2=3)
-    function showHide(n){
-        // if.for문 사용
-        
-        // // notice보이게
-        // box1.style.display="block";
-        // // 나머지는 안보이게
-        // box2.style.display="none";
-        // box3.style.display="none";
-
-        // 위에 함수를 주석으로 막고 반복문으로 돌려보자.
-        for(var i=1;i<=3;i++){
-            var box = document.getElementById("box"+i);
-            if(n==i){
-                // 그렇다 아니다 하는 흑백논리
-                box.style.display = "block"; 
-                // 전부 보임 - > 지금 선택한 탭이라면
-            }else{
-                box.style.display="none";      
-                // 전부 안보임 -> 지금 선택한 탭이 아니라면
-            }
-        }
-    }
-
 </script>
 </head>
 <body>
@@ -92,12 +77,12 @@
             <a href="javascript:showHide(1)" style="background: seagreen;">공지사항</a>
             <a href="javascript:showHide(2)" style="background: gold;">QnA</a>
             <a href="javascript:showHide(3)" style="background: dodgerblue;">자유게시판</a>
-        </div>          <!-- 탭 나올곳-->
+        </div>
         <div class="content">
             <div id="box1"></div>
             <div id="box2"></div>
             <div id="box3"></div>
-        </div>     <!-- 내용 나올곳-->
+        </div>
     </div>
 </body>
 </html>
