--- a/project1005/슈팅게임.html
+++ b/project1005/슈팅게임.html
@@ -18,6 +18,7 @@
 <script src="./Hero.js"></script>
 <script src="./Bullet.js"></script>
 <script src="./Enemy.js"></script>
+<script src="../js/lib.js"></script>
 <script>
     var wrapper;
     var bgY = 0;
