--- a/project1006/나의맵.html
+++ b/project1006/나의맵.html
@@ -36,4 +36,4 @@
     <div id="myMap">구글 지도 나올 예정</div>
 </body>
 </html>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCMzVPP4Oh7ZIslGOCb4i2ykLvgvQ8-HJA&callback=init"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=&callback=init"></script>
