--- a/project1006/구글맵.html
+++ b/project1006/구글맵.html
@@ -16,7 +16,7 @@ var map = new google.maps.Map(document.getElementById("googleMap"),mapProp);
 }
 </script>
 
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCMzVPP4Oh7ZIslGOCb4i2ykLvgvQ8-HJA&callback=myMap"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=&callback=myMap"></script>
 
 </body>
 </html>
