--- a/project1006/나의맵.html
+++ b/project1006/나의맵.html
@@ -18,17 +18,44 @@
 
     function init(){
         myMap = document.getElementById("myMap");
+        var pos = new google.maps.LatLng(37.500087, 127.036459);
 
-        // dummy 객체라고 생각하면 된다. 1회성사용 재사용 이 어려움
+        // (1) dummy 객체라고 생각하면 된다. 1회성사용 재사용 이 어려움
         var mapProp = {
             // center라는 변수에 위도와 경도를 나타내는 함수 = LatLng()
-            center:new google.maps.LatLng(37.500087, 127.036459),
+            // (3-1 겹치니깐) new google.maps.LatLng(37.500087, 127.036459)
+            center:pos,
             // 화면의 크기 보여주는 것(카메라) : 20(크기조절)
             zoom:17
         };
-        // 구글 맵 객체 생성
+        // (2)구글 맵 객체 생성
         var map = new google.maps.Map(myMap,mapProp);   
         // (맵이 그려질 div, 옵션);
+
+        // (3) 마커생성
+        var marker = new google.maps.Marker({
+            position : pos,
+            animation:google.maps.Animation.BOUNCE,
+            icon:{
+             url:"../images/shooting/e1.png",
+             scaledSize:new google.maps.Size(45,45)
+            }
+        });
+        // 마커를 적용할 맵 객체
+        marker.setMap(map);
+
+        // (4) 마커에 클릭 이벤트 부여하기
+        google.maps.event.addListener(marker,"click",function(){
+            // alert("여기가 궁금해?");
+            // 마커의 위치가 커짐 17->20
+            map.setZoom(20);
+        });
+
+        // (5) 정보창 띄우기
+        var pop = new google.maps.InfoWindow({
+            content : "여기가 역삼 맛집이예요~"
+        });
+        pop.open(map,marker);   // 어디위치,어디위에
     }
 </script>
 </head>
@@ -36,4 +63,4 @@
     <div id="myMap">구글 지도 나올 예정</div>
 </body>
 </html>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCMzVPP4Oh7ZIslGOCb4i2ykLvgvQ8-HJA&callback=init"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=&callback=init"></script>
