--- a/project0921/게시판탭T.html
+++ b/project0921/게시판탭T.html
@@ -88,7 +88,9 @@
 <body>
     <div class="wrapper">
         <div class="tab">
-            <a href="javascript:showHide1()" style="background: seagreen;">공지사항</a><a href="javascript:showHide2()" style="background: gold;">QnA</a><a href="javascript:showHide3()" style="background: dodgerblue;">자유게시판</a>
+            <a href="javascript:showHide1()" style="background: seagreen;">공지사항</a>
+            <a href="javascript:showHide2()" style="background: gold;">QnA</a>
+            <a href="javascript:showHide3()" style="background: dodgerblue;">자유게시판</a>
         </div>          <!-- 탭 나올곳-->
         <div class="content">
             <div id="notice"></div>
